--- a/MBedwarsTweaks/src/main/resources/plugin.yml
+++ b/MBedwarsTweaks/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: MBedwarsTweaks
-version: 5.0.0-Beta2
+version: 5.0.0
 author: MetallicGoat
 main: me.metallicgoat.tweaksaddon.MBedwarsTweaksPlugin
 description: Adds some extra customizability to MBedwars
