--- a/MBedwarsTweaks/pom.xml
+++ b/MBedwarsTweaks/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>me.metallicgoat.tweaksaddon</groupId>
         <artifactId>MBedwarsTweaksParent</artifactId>
-        <version>5.0.0-Beta2</version>
+        <version>5.0.0</version>
     </parent>
 
     <repositories>
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>me.metallicgoat.tweaksaddon</groupId>
             <artifactId>API</artifactId>
-            <version>5.0.0-Beta2</version>
+            <version>5.0.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
